[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/sprite_4.png" type="Texture" id=1]
[ext_resource path="res://Sprites/sprite_6.png" type="Texture" id=2]
[ext_resource path="res://Sprites/sprite_7.png" type="Texture" id=3]
[ext_resource path="res://Sprites/sprite_5.png" type="Texture" id=4]
[ext_resource path="res://Sprites/sprite_3.png" type="Texture" id=5]
[ext_resource path="res://Cenas/jogador.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/gerador.gd" type="Script" id=7]
[ext_resource path="res://Scripts/jogo.gd" type="Script" id=8]
[ext_resource path="res://Cenas/ui_gameover.tscn" type="PackedScene" id=9]
[ext_resource path="res://Cenas/ui_menu.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 33 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 512, 19 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fontes/IMPACT.TTF"

[sub_resource type="DynamicFont" id=4]
size = 40
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 5
font_data = SubResource( 3 )

[node name="jogo" type="Node2D"]
script = ExtResource( 8 )

[node name="fundo" type="Node2D" parent="."]

[node name="spr_fundo" type="Sprite" parent="fundo"]
position = Vector2( 512, 298 )
scale = Vector2( 6.54375, 3.9625 )
texture = ExtResource( 1 )

[node name="spr_detalhes" type="TextureRect" parent="fundo"]
margin_left = -6.0
margin_top = 401.0
margin_right = 1030.0
margin_bottom = 542.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="gerador" type="Node2D" parent="."]
script = ExtResource( 7 )
tempo_limite = 1.5

[node name="terreno" type="Node2D" parent="."]

[node name="body_terreno" type="StaticBody2D" parent="terreno"]

[node name="spr_terreno" type="TextureRect" parent="terreno/body_terreno"]
margin_top = 536.0
margin_right = 1024.0
margin_bottom = 606.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 2

[node name="spr_teto" type="Sprite" parent="terreno/body_terreno"]
position = Vector2( 509.5, 178 )
scale = Vector2( 6.43125, 2.25 )
texture = ExtResource( 3 )

[node name="cs_terreno" type="CollisionShape2D" parent="terreno/body_terreno"]
position = Vector2( 512, 571 )
shape = SubResource( 1 )

[node name="cs_terreno2" type="CollisionShape2D" parent="terreno/body_terreno"]
position = Vector2( 512, 14 )
shape = SubResource( 2 )

[node name="spr_chuveiro" type="Sprite" parent="terreno"]
position = Vector2( 55, 55.5 )
scale = Vector2( 0.7375, 0.70625 )
texture = ExtResource( 2 )

[node name="jogador" parent="." instance=ExtResource( 6 )]
position = Vector2( 122, 247 )

[node name="hud" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="txt_pontos" type="Label" parent="hud"]
margin_left = 403.0
margin_right = 622.0
margin_bottom = 51.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="txt_highscore" type="Label" parent="hud"]
margin_left = 557.0
margin_top = 552.0
margin_right = 1012.0
margin_bottom = 603.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Highscore: 0"
align = 2

[node name="ui_gameover" parent="hud" instance=ExtResource( 9 )]
visible = false

[node name="ui_menu" parent="hud" instance=ExtResource( 10 )]
